src/main/python/compiladoresParser.py
# Generated from /home/valen/dhs-2023/compiladoresDHS/src/main/python/compiladores.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class compiladoresParser ( Parser ):

    grammarFileName = "compiladores.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "'{'", "'}'", "';'", "','", 
                     "'='", "'.'", "'+'", "'*'", "'-'", "'/'", "'++'", "'--'", 
                     "'<'", "'>'", "'=='", "'!='", "'>='", "'<='", "'&&'", 
                     "'||'", "'int'", "'float'", "'bool'", "<INVALID>", 
                     "'if'", "'else'", "'else if'", "'switch'", "'case'", 
                     "'default'", "'break'", "':'", "'while'", "'for'", 
                     "<INVALID>", "'return'" ]

    symbolicNames = [ "<INVALID>", "PA", "PC", "LA", "LC", "PYC", "COMA", 
                      "ASSIG", "PUNTO", "SUMA", "MULT", "REST", "DIV", "INCREMENTO", 
                      "DECREMENTO", "MENOR", "MAYOR", "IGUALDAD", "DISTINTO", 
                      "MAYORIGUAL", "MENORIGUAL", "AND", "OR", "INT", "FLOAT", 
                      "BOOL", "TOF", "IIF", "IELSE", "IELSEIF", "ISWITCH", 
                      "CASE", "DEFAULT", "BREAK", "DP", "IWHILE", "IFOR", 
                      "NUMERO", "RETORNO", "ID", "WS" ]

    RULE_programa = 0
    RULE_instrucciones = 1
    RULE_instruccion = 2
    RULE_bloque = 3
    RULE_retorno = 4
    RULE_valor = 5
    RULE_prototipado = 6
    RULE_argumentosProto = 7
    RULE_argumentoProto = 8
    RULE_funcion = 9
    RULE_argumentos = 10
    RULE_argumento = 11
    RULE_llamadaFuncion = 12
    RULE_parametros = 13
    RULE_bloquefor = 14
    RULE_bloqueWhile = 15
    RULE_bloqueIf = 16
    RULE_bloqueElse = 17
    RULE_bloqueElseIf = 18
    RULE_bloqueSwitch = 19
    RULE_casos = 20
    RULE_caso = 21
    RULE_control = 22
    RULE_cmps = 23
    RULE_cmp = 24
    RULE_incrementoUnario = 25
    RULE_decrementoUnario = 26
    RULE_declaracion = 27
    RULE_tdato = 28
    RULE_declaracionConjunta = 29
    RULE_init = 30
    RULE_asignacion = 31
    RULE_asignarFuncion = 32
    RULE_oparitmeticas = 33
    RULE_oparitmetica = 34
    RULE_expresion = 35
    RULE_termino = 36
    RULE_terminos = 37
    RULE_factor = 38
    RULE_f = 39

    ruleNames =  [ "programa", "instrucciones", "instruccion", "bloque", 
                   "retorno", "valor", "prototipado", "argumentosProto", 
                   "argumentoProto", "funcion", "argumentos", "argumento", 
                   "llamadaFuncion", "parametros", "bloquefor", "bloqueWhile", 
                   "bloqueIf", "bloqueElse", "bloqueElseIf", "bloqueSwitch", 
                   "casos", "caso", "control", "cmps", "cmp", "incrementoUnario", 
                   "decrementoUnario", "declaracion", "tdato", "declaracionConjunta", 
                   "init", "asignacion", "asignarFuncion", "oparitmeticas", 
                   "oparitmetica", "expresion", "termino", "terminos", "factor", 
                   "f" ]

    EOF = Token.EOF
    PA=1
    PC=2
    LA=3
    LC=4
    PYC=5
    COMA=6
    ASSIG=7
    PUNTO=8
    SUMA=9
    MULT=10
    REST=11
    DIV=12
    INCREMENTO=13
    DECREMENTO=14
    MENOR=15
    MAYOR=16
    IGUALDAD=17
    DISTINTO=18
    MAYORIGUAL=19
    MENORIGUAL=20
    AND=21
    OR=22
    INT=23
    FLOAT=24
    BOOL=25
    TOF=26
    IIF=27
    IELSE=28
    IELSEIF=29
    ISWITCH=30
    CASE=31
    DEFAULT=32
    BREAK=33
    DP=34
    IWHILE=35
    IFOR=36
    NUMERO=37
    RETORNO=38
    ID=39
    WS=40

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def instrucciones(self):
            return self.getTypedRuleContext(compiladoresParser.InstruccionesContext,0)


        def EOF(self):
            return self.getToken(compiladoresParser.EOF, 0)

        def getRuleIndex(self):
            return compiladoresParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrograma" ):
                return visitor.visitPrograma(self)
            else:
                return visitor.visitChildren(self)




    def programa(self):

        localctx = compiladoresParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.instrucciones()
            self.state = 81
            self.match(compiladoresParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstruccionesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def instruccion(self):
            return self.getTypedRuleContext(compiladoresParser.InstruccionContext,0)


        def instrucciones(self):
            return self.getTypedRuleContext(compiladoresParser.InstruccionesContext,0)


        def getRuleIndex(self):
            return compiladoresParser.RULE_instrucciones

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInstrucciones" ):
                listener.enterInstrucciones(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInstrucciones" ):
                listener.exitInstrucciones(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInstrucciones" ):
                return visitor.visitInstrucciones(self)
            else:
                return visitor.visitChildren(self)




    def instrucciones(self):

        localctx = compiladoresParser.InstruccionesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_instrucciones)
        try:
            self.state = 87
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [compiladoresParser.LA, compiladoresParser.INT, compiladoresParser.FLOAT, compiladoresParser.BOOL, compiladoresParser.IIF, compiladoresParser.ISWITCH, compiladoresParser.IWHILE, compiladoresParser.IFOR, compiladoresParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 83
                self.instruccion()
                self.state = 84
                self.instrucciones()
                pass
            elif token in [compiladoresParser.EOF, compiladoresParser.LC, compiladoresParser.CASE, compiladoresParser.DEFAULT, compiladoresParser.BREAK, compiladoresParser.RETORNO]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstruccionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def bloque(self):
            return self.getTypedRuleContext(compiladoresParser.BloqueContext,0)


        def declaracion(self):
            return self.getTypedRuleContext(compiladoresParser.DeclaracionContext,0)


        def PYC(self):
            return self.getToken(compiladoresParser.PYC, 0)

        def asignacion(self):
            return self.getTypedRuleContext(compiladoresParser.AsignacionContext,0)


        def incrementoUnario(self):
            return self.getTypedRuleContext(compiladoresParser.IncrementoUnarioContext,0)


        def decrementoUnario(self):
            return self.getTypedRuleContext(compiladoresParser.DecrementoUnarioContext,0)


        def bloqueIf(self):
            return self.getTypedRuleContext(compiladoresParser.BloqueIfContext,0)


        def bloqueWhile(self):
            return self.getTypedRuleContext(compiladoresParser.BloqueWhileContext,0)


        def bloquefor(self):
            return self.getTypedRuleContext(compiladoresParser.BloqueforContext,0)


        def bloqueSwitch(self):
            return self.getTypedRuleContext(compiladoresParser.BloqueSwitchContext,0)


        def prototipado(self):
            return self.getTypedRuleContext(compiladoresParser.PrototipadoContext,0)


        def funcion(self):
            return self.getTypedRuleContext(compiladoresParser.FuncionContext,0)


        def llamadaFuncion(self):
            return self.getTypedRuleContext(compiladoresParser.LlamadaFuncionContext,0)


        def asignarFuncion(self):
            return self.getTypedRuleContext(compiladoresParser.AsignarFuncionContext,0)


        def getRuleIndex(self):
            return compiladoresParser.RULE_instruccion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInstruccion" ):
                listener.enterInstruccion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInstruccion" ):
                listener.exitInstruccion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInstruccion" ):
                return visitor.visitInstruccion(self)
            else:
                return visitor.visitChildren(self)




    def instruccion(self):

        localctx = compiladoresParser.InstruccionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_instruccion)
        try:
            self.state = 116
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 89
                self.bloque()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 90
                self.declaracion()
                self.state = 91
                self.match(compiladoresParser.PYC)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 93
                self.asignacion()
                self.state = 94
                self.match(compiladoresParser.PYC)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 96
                self.incrementoUnario()
                self.state = 97
                self.match(compiladoresParser.PYC)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 99
                self.decrementoUnario()
                self.state = 100
                self.match(compiladoresParser.PYC)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 102
                self.bloqueIf()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 103
                self.bloqueWhile()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 104
                self.bloquefor()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 105
                self.bloqueSwitch()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 106
                self.prototipado()
                self.state = 107
                self.match(compiladoresParser.PYC)
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 109
                self.funcion()
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 110
                self.llamadaFuncion()
                self.state = 111
                self.match(compiladoresParser.PYC)
                pass

            elif la_ == 13:
                self.enterOuterAlt(localctx, 13)
                self.state = 113
                self.asignarFuncion()
                self.state = 114
                self.match(compiladoresParser.PYC)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BloqueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LA(self):
            return self.getToken(compiladoresParser.LA, 0)

        def instrucciones(self):
            return self.getTypedRuleContext(compiladoresParser.InstruccionesContext,0)


        def retorno(self):
            return self.getTypedRuleContext(compiladoresParser.RetornoContext,0)


        def PYC(self):
            return self.getToken(compiladoresParser.PYC, 0)

        def LC(self):
            return self.getToken(compiladoresParser.LC, 0)

        def getRuleIndex(self):
            return compiladoresParser.RULE_bloque

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBloque" ):
                listener.enterBloque(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBloque" ):
                listener.exitBloque(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBloque" ):
                return visitor.visitBloque(self)
            else:
                return visitor.visitChildren(self)




    def bloque(self):

        localctx = compiladoresParser.BloqueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_bloque)
        try:
            self.state = 128
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 118
                self.match(compiladoresParser.LA)
                self.state = 119
                self.instrucciones()
                self.state = 120
                self.retorno()
                self.state = 121
                self.match(compiladoresParser.PYC)
                self.state = 122
                self.match(compiladoresParser.LC)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 124
                self.match(compiladoresParser.LA)
                self.state = 125
                self.instrucciones()
                self.state = 126
                self.match(compiladoresParser.LC)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RetornoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RETORNO(self):
            return self.getToken(compiladoresParser.RETORNO, 0)

        def ID(self):
            return self.getToken(compiladoresParser.ID, 0)

        def NUMERO(self):
            return self.getToken(compiladoresParser.NUMERO, 0)

        def oparitmetica(self):
            return self.getTypedRuleContext(compiladoresParser.OparitmeticaContext,0)


        def getRuleIndex(self):
            return compiladoresParser.RULE_retorno

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRetorno" ):
                listener.enterRetorno(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRetorno" ):
                listener.exitRetorno(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRetorno" ):
                return visitor.visitRetorno(self)
            else:
                return visitor.visitChildren(self)




    def retorno(self):

        localctx = compiladoresParser.RetornoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_retorno)
        try:
            self.state = 137
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 130
                self.match(compiladoresParser.RETORNO)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 131
                self.match(compiladoresParser.RETORNO)
                self.state = 132
                self.match(compiladoresParser.ID)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 133
                self.match(compiladoresParser.RETORNO)
                self.state = 134
                self.match(compiladoresParser.NUMERO)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 135
                self.match(compiladoresParser.RETORNO)
                self.state = 136
                self.oparitmetica()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMERO(self):
            return self.getToken(compiladoresParser.NUMERO, 0)

        def TOF(self):
            return self.getToken(compiladoresParser.TOF, 0)

        def ID(self):
            return self.getToken(compiladoresParser.ID, 0)

        def getRuleIndex(self):
            return compiladoresParser.RULE_valor

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValor" ):
                listener.enterValor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValor" ):
                listener.exitValor(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitValor" ):
                return visitor.visitValor(self)
            else:
                return visitor.visitChildren(self)




    def valor(self):

        localctx = compiladoresParser.ValorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_valor)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << compiladoresParser.TOF) | (1 << compiladoresParser.NUMERO) | (1 << compiladoresParser.ID))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrototipadoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tdato(self):
            return self.getTypedRuleContext(compiladoresParser.TdatoContext,0)


        def ID(self):
            return self.getToken(compiladoresParser.ID, 0)

        def PA(self):
            return self.getToken(compiladoresParser.PA, 0)

        def PC(self):
            return self.getToken(compiladoresParser.PC, 0)

        def argumentosProto(self):
            return self.getTypedRuleContext(compiladoresParser.ArgumentosProtoContext,0)


        def getRuleIndex(self):
            return compiladoresParser.RULE_prototipado

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrototipado" ):
                listener.enterPrototipado(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrototipado" ):
                listener.exitPrototipado(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrototipado" ):
                return visitor.visitPrototipado(self)
            else:
                return visitor.visitChildren(self)




    def prototipado(self):

        localctx = compiladoresParser.PrototipadoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_prototipado)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.tdato()
            self.state = 142
            self.match(compiladoresParser.ID)
            self.state = 143
            self.match(compiladoresParser.PA)
            self.state = 146
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 144
                self.argumentosProto()
                pass

            elif la_ == 2:
                pass


            self.state = 148
            self.match(compiladoresParser.PC)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgumentosProtoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def argumentoProto(self):
            return self.getTypedRuleContext(compiladoresParser.ArgumentoProtoContext,0)


        def COMA(self):
            return self.getToken(compiladoresParser.COMA, 0)

        def argumentosProto(self):
            return self.getTypedRuleContext(compiladoresParser.ArgumentosProtoContext,0)


        def getRuleIndex(self):
            return compiladoresParser.RULE_argumentosProto

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArgumentosProto" ):
                listener.enterArgumentosProto(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArgumentosProto" ):
                listener.exitArgumentosProto(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArgumentosProto" ):
                return visitor.visitArgumentosProto(self)
            else:
                return visitor.visitChildren(self)




    def argumentosProto(self):

        localctx = compiladoresParser.ArgumentosProtoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_argumentosProto)
        try:
            self.state = 156
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 150
                self.argumentoProto()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 151
                self.argumentoProto()
                self.state = 152
                self.match(compiladoresParser.COMA)
                self.state = 153
                self.argumentosProto()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgumentoProtoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tdato(self):
            return self.getTypedRuleContext(compiladoresParser.TdatoContext,0)


        def ID(self):
            return self.getToken(compiladoresParser.ID, 0)

        def getRuleIndex(self):
            return compiladoresParser.RULE_argumentoProto

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArgumentoProto" ):
                listener.enterArgumentoProto(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArgumentoProto" ):
                listener.exitArgumentoProto(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArgumentoProto" ):
                return visitor.visitArgumentoProto(self)
            else:
                return visitor.visitChildren(self)




    def argumentoProto(self):

        localctx = compiladoresParser.ArgumentoProtoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_argumentoProto)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 158
            self.tdato()
            self.state = 159
            self.match(compiladoresParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tdato(self):
            return self.getTypedRuleContext(compiladoresParser.TdatoContext,0)


        def ID(self):
            return self.getToken(compiladoresParser.ID, 0)

        def PA(self):
            return self.getToken(compiladoresParser.PA, 0)

        def PC(self):
            return self.getToken(compiladoresParser.PC, 0)

        def bloque(self):
            return self.getTypedRuleContext(compiladoresParser.BloqueContext,0)


        def argumentos(self):
            return self.getTypedRuleContext(compiladoresParser.ArgumentosContext,0)


        def getRuleIndex(self):
            return compiladoresParser.RULE_funcion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncion" ):
                listener.enterFuncion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncion" ):
                listener.exitFuncion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncion" ):
                return visitor.visitFuncion(self)
            else:
                return visitor.visitChildren(self)




    def funcion(self):

        localctx = compiladoresParser.FuncionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_funcion)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 161
            self.tdato()
            self.state = 162
            self.match(compiladoresParser.ID)
            self.state = 163
            self.match(compiladoresParser.PA)
            self.state = 166
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 164
                self.argumentos()
                pass

            elif la_ == 2:
                pass


            self.state = 168
            self.match(compiladoresParser.PC)
            self.state = 169
            self.bloque()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgumentosContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def argumento(self):
            return self.getTypedRuleContext(compiladoresParser.ArgumentoContext,0)


        def COMA(self):
            return self.getToken(compiladoresParser.COMA, 0)

        def argumentos(self):
            return self.getTypedRuleContext(compiladoresParser.ArgumentosContext,0)


        def getRuleIndex(self):
            return compiladoresParser.RULE_argumentos

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArgumentos" ):
                listener.enterArgumentos(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArgumentos" ):
                listener.exitArgumentos(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArgumentos" ):
                return visitor.visitArgumentos(self)
            else:
                return visitor.visitChildren(self)




    def argumentos(self):

        localctx = compiladoresParser.ArgumentosContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_argumentos)
        try:
            self.state = 177
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 171
                self.argumento()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 172
                self.argumento()
                self.state = 173
                self.match(compiladoresParser.COMA)
                self.state = 174
                self.argumentos()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgumentoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
